<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">poipoi</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="ipaddress" templateMergeStrategy="preserve" translatable="false">35.200.47.78</string>
    <string-array name="gomi_kind">
        <item>combustibles</item>
        <item>incombustiblees</item>
        <item>PET bottles</item>
        <item>can</item>
    </string-array>
    <string-array name="setting_account_email">
        <item>Change user name</item>
        <item>Reset password</item>
        <item>Delete account</item>
    </string-array>
    <string-array name="setting_account_google">
        <item>Change user name</item>
        <item>Delete account</item>
    </string-array>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="close">Close</string>
    <string name="notice_title">Use location information</string>
    <string name="notice_mes">Location information is used to display your position on the map.\nAll location information is processed in the application.\nSo location information will not be sent to the server etc.\nYou can change the access permission later from the terminal settings</string>
    <string name="mes_add">Specified point</string>
    <string name="mes_page1">Types of garbage that can be thrown away</string>
    <string name="mes_page2">The place of trash can</string>
    <string name="mes_page3">Can anyone use it?</string>
    <string name="mes_page4">Why can\'t it be used by everyone?</string>
    <string name="error_page1">Please select</string>
    <string name="hint_page2">e.g. 3rd floor of building</string>
    <string name="hint_page3">Choose \'Yes\' if it\'s in the park etc\nChoose \'No\' if it\'s in station platform etc</string>
    <string name="hint_page4">e.g. only the user of the facility can use it</string>
    <string name="mes_success">Sent</string>
    <string name="mes_failed">Failed to send</string>
    <string name="str_button">Retry</string>
    <string name="info_failed">error:Failed to get information</string>
    <string name="loading">Loading</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rb_all">All</string>
    <string name="rb_select">Select</string>
    <string name="use">Any one can use it</string>
    <string name="nouse">There is a possibility that it can\'t be used</string>
    <string name="nouse_mes">Available targets are limited</string>
    <string name="filter_mes">Items to display</string>
    <string name="title_mes">ゴミ箱情報共有コミュニティアプリケーション</string>
    <string name="use_account">アカウントを使用して開始</string>
    <string name="non_use_account">アカウントを使用せずに開始</string>
    <string name="non_use_account_hint">※一部の機能は使用できません</string>
    <string name="use_account_button">新規登録・ログイン</string>
    <string name="non_use_account_button">登録せずに開始</string>
    <string name="fui_default_toolbar_title">@string/app_name</string>
    <string name="fui_progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
    <string name="fui_sign_in_default" translation_description="Button text to sign in">Sign in</string>
    <string name="fui_general_error" translation_description="Toast text flashing general error">An error has occurred.</string>
    <string name="fui_idp_name_google">Google</string>
    <string name="fui_idp_name_facebook">Facebook</string>
    <string name="fui_idp_name_twitter">Twitter</string>
    <string name="fui_provider_name_email">Email</string>
    <string name="fui_provider_name_phone">Phone</string>
    <string name="fui_sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
    <string name="fui_sign_in_with_facebook" translation_description="Sign in button text">Sign in with Facebook</string>
    <string name="fui_sign_in_with_twitter" translation_description="Sign in button text">Sign in with Twitter</string>
    <string name="fui_sign_in_with_email" translation_description="Sign in button text">Sign in with email</string>
    <string name="fui_sign_in_with_phone" translation_description="Sign in button text">Sign in with phone</string>
    <string name="fui_next_default" translation_description="Button text to continue">Next</string>
    <string name="fui_email_hint" translation_description="Hint in email input field">Email</string>
    <string name="fui_phone_hint" translation_description="Hint for phone input field">Phone Number</string>
    <string name="fui_password_hint" translation_description="Hint for password input field">Password</string>
    <string name="fui_required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
    <string name="fui_invalid_email_address" translation_description="Inline error for invalid email address">That email address isn\'t correct</string>
    <string name="fui_missing_email_address" translation_description="Inline error for empty email address in input field">Enter your email address to continue</string>
    <string name="fui_progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>
    <string name="fui_title_register_email" translation_description="Title for signup form">Sign up</string>
    <string name="fui_name_hint" translation_description="Hint for last name input field">First &amp; last name</string>
    <string name="fui_button_text_save" translation_description="Button text to save input form">Save</string>
    <string name="fui_progress_dialog_signing_up" translation_description="Dialog text while waiting for server's signup response">Signing up…</string>
    <plurals name="fui_error_weak_password" translation_description="Inline error for weak password">
        <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="fui_email_account_creation_error" translation_description="Inline error for signup failure">Email account registration unsuccessful</string>
    <string name="fui_error_user_collision" translation_description="Inline error when user signs up using an existing email account">An account already exists with that email address.</string>
    <string name="fui_create_account_preamble_tos_and_pp" translation_description="Text shown when creating an account with both terms of service and privacy policy.">By tapping <xliff:g example="SAVE" id="btn" translation_description="">%1$s</xliff:g> you are indicating that you agree to the <xliff:g example="https://google.com/terms" id="tos" translation_description="">%2$s</xliff:g> and the <xliff:g example="https://google.com/privacy" id="pp" translation_description="">%3$s</xliff:g>.</string>
    <string name="fui_create_account_preamble_tos_only" translation_description="Text shown when creating an account with only terms of service">By tapping <xliff:g example="SAVE" id="btn" translation_description="">%1$s</xliff:g> you are indicating that you agree to the <xliff:g example="https://google.com/terms" id="tos" translation_description="">%2$s</xliff:g>.</string>
    <string name="fui_create_account_preamble_pp_only" translation_description="Text shown when creating an account with only privacy policy">By tapping <xliff:g example="SAVE" id="btn" translation_description="">%1$s</xliff:g> you are indicating that you agree to the <xliff:g example="https://google.com/privacy" id="pp" translation_description="">%2$s</xliff:g>.</string>
    <string name="fui_terms_of_service" translation_description="Link text to web url containing the app's terms of service">Terms of Service</string>
    <string name="fui_privacy_policy" translation_description="Link text to web url containing the app's privacy policy">Privacy Policy</string>
    <string name="fui_title_welcome_back_idp_prompt">@string/fui_sign_in_default</string>
    <string name="fui_title_welcome_back_password_prompt">@string/fui_sign_in_default</string>
    <string name="fui_welcome_back_idp_header" translation_description="Inline subtitle to users whose signup was interrupted since an existing account was detected">You already have an account</string>
    <string name="fui_welcome_back_email_header" translation_description="Message for returning users">Welcome back!</string>
    <string name="fui_welcome_back_idp_prompt" translation_description="Message to users that need to signin using existing IDP accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>.
        Sign in with <xliff:g example="Google" id="provider_name" translation_description="">%2$s</xliff:g> to continue.
    </string>
    <string name="fui_welcome_back_password_prompt_body" translation_description="Message to users that need to signin using existing email accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>
        to sign in. Enter your password for that account.
    </string>
    <string name="fui_progress_dialog_signing_in" translation_description="Progress dialog text">Signing in…</string>
    <string name="fui_trouble_signing_in" translation_description="Link leading to forgot password flow">Trouble signing in?</string>
    <string name="fui_title_recover_password_activity" translation_description="Recover password screen title">Recover password</string>
    <string name="fui_title_confirm_recover_password" translation_description="Password recovery confirmation message">Check your email</string>
    <string name="fui_password_recovery_body" translation_description="Password recovery message body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="fui_button_text_send" translation_description="Button text to send recovery email">Send</string>
    <string name="fui_confirm_recovery_body" translation_description="Alert dialog displayed after password recovery email is sent">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="fui_progress_dialog_sending" translation_description="Progress dialog while password recovery email is being sent">Sending…</string>
    <string name="fui_error_email_does_not_exist" translation_description="Inline error when user attempt signin with invalid account">That email address doesn\'t match an existing account</string>
    <string name="fui_accessibility_logo" translation_description="Content description for app logo">App logo</string>
    <string name="fui_signed_in_with_specific_account" translation_description="Post signin message showing method of authentication">Signed in as <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g></string>
    <string name="fui_verify_phone_number_title" translation_description="Phone number entry form title">Enter your phone number</string>
    <string name="fui_invalid_phone_number" translation_description="Inline error when phone number entered is invalid">Enter a valid phone number</string>
    <string name="fui_enter_confirmation_code" translation_description="Phone number verification code entry form title">Enter the 6-digit code we sent to</string>
    <string name="fui_resend_code_in" translation_description="Countdown timer text that the user needs to wait for before attempting to resend verification sms">Resend code in 0:%02d</string>
</resources>